--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/pokedex
 spring.datasource.username=root
 spring.datasource.password=admin
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
