feature: add /pokedex as base path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+server.servlet.context-path=/pokedex
 spring.datasource.url=jdbc:mysql://localhost:3306/pokedex
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
