refactor: removing hardcoded urls

--- a/pokedex/src/main/resources/application.properties
+++ b/pokedex/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.servlet.context-path=/pokedex
 spring.datasource.url=jdbc:mysql://localhost:3306/pokedex
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.username=pokedex
+spring.datasource.password=pokedex
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
-
+weather.url=http://localhost:8081/weather/
