feature: dockerfile - pokedex service should wait 15sec until start

--- a/pokedex/Dockerfile
+++ b/pokedex/Dockerfile
@@ -2,4 +2,4 @@ FROM maven:3.8.4-openjdk-11
 WORKDIR /pokedex
 COPY . .
 RUN mvn clean install
-CMD mvn spring-boot:run
+CMD sleep 15 && mvn spring-boot:run
